--- a/advice/index.html
+++ b/advice/index.html
@@ -14,6 +14,10 @@
 			<button id="fortune-button"> Get advice </button>
 			<section class="advice"></section>
 		</section>
+		<section>
+			<h2> History </h2>
+			<ol class="advice-history"> </ol>
+		</section>
 	</main>
 </body>
 </html>
